--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
-
 .two-column {
   display: flex;
   flex-direction: row;
@@ -7,12 +5,11 @@
 
 .two-column div {
   flex: 1;
-  border: 1px solid blue;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  text-align: left;
 }
 
 .two-column.reverse {
