--- a/src/pages/stories.scss
+++ b/src/pages/stories.scss
@@ -1,15 +1,17 @@
 .wrapper {
   display: grid;
-  grid-template-columns: 100px 100px 100px;
+  grid-template-columns: 250px 250px 250px;
   grid-gap: 10px;
   background-color: #fff;
   color: #444;
 }
 
 .card {
-  background-color: #444;
-  color: #fff;
   border-radius: 5px;
   padding: 20px;
-  font-size: 150%;
+}
+
+.stories-hero {
+  background: 1c1c1c;
+  color: #fff;
 }
